部分配置内容修改

--- a/spring-cloud-config-client/src/main/resources/application.yml
+++ b/spring-cloud-config-client/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
       uri: http://localhost:8888/
 server:
   port: 8881
+#以下配置是避免 http://localhost:8881/refresh 需要权限问题
+management:
+  security:
+    enabled: false
