--- a/spring-cloud-config-server/src/main/resources/application.yml
+++ b/spring-cloud-config-server/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     config:
       server:
         git:
-          uri: https://gitee.com/zyaidc/test
-          searchPaths: spring-cloud/helloworldConfig
+          uri: https://github.com/LordlingZhang/spring-cloud-parent
+          searchPaths: config-file
   application:
     name: config-server
