--- a/spring-cloud-config-client/src/main/resources/application.yml
+++ b/spring-cloud-config-client/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
 spring:
   application:
     name: config-client
@@ -5,7 +10,10 @@ spring:
     config:
       label: master
       profile: dev
-      uri: http://localhost:8888/
+#      uri: http://localhost:8888/
+      discovery:
+        enabled: true
+        serviceId: config-server
 server:
   port: 8881
 #以下配置是避免 http://localhost:8881/refresh 需要权限问题
