--- a/spring-cloud-config-client/src/main/resources/application.yml
+++ b/spring-cloud-config-client/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
       discovery:
         enabled: true
         serviceId: config-server
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 server:
   port: 8881
 #以下配置是避免 http://localhost:8881/refresh 需要权限问题
